# import_bids

./: .gitignore  LICENSE.rst  README.md  pyproject.toml  requirements.txt
src/import_bids/: __init__.py  convert_bids.py  main.py  setup_montage.py
src/import_bids/tests/: test_main.py
